welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
   } else if ( getDirection() == Direction.OUEST ){
          ^SnakeBuggle:26: error: value Ouest is not a member of object plm.universe.Direction
  if ( getDirection() == Direction.Ouest ){
                                   ^